Update login page